@@ -1,3 +1,9 @@
+globus-common (17.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * win: set minimum target to Windows 7
+
+ -- Globus Toolkit <support@globus.org>  Thu, 11 Jul 2019 14:42:57 -0500
+
 globus-common (17.4-1+gt6.@distro@) @distro@; urgency=low
 
   * win32 fix
